--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,188 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+    <div class="card">
+      <div class="card-header"><h3>Payment Form</h3></div>
+      <form class="row g-5 needs-validation" novalidate>
+        <div class="col-md-5 position-relative">
+          <label for="inputCard" class="form-label">Credit Card #</label>
+          <input type="number" class="form-control" id="inputCard" required />
+          <div class="invalid-tooltip">
+            Please enter a valid Credit Card #
+          </div>
+        </div>
+
+        <div class="col-md-3 position-relative">
+          <label for="inputCVC" class="form-label">CVC #</label>
+          <input type="number" class="form-control" id="inputCVC" required />
+          <div class="invalid-tooltip">
+            Please enter a valid CVC
+          </div>
+        </div>
+        <div class="col-md-4 position-relative">
+          <label for="inputAmount" class="form-label">Amount</label>
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="validationTooltipUsernamePrepend"
+              >$</span
+            >
+            <input
+              type="number"
+              class="form-control"
+              id="inputAmount"
+              aria-describedby="validationTooltipUsernamePrepend"
+              required
+            />
+            <div class="invalid-tooltip">
+              Please enter a valid amount
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 position-relative">
+          <label for="inputFirst" class="form-label">First Name</label>
+          <input type="text" class="form-control" id="inputFirst" required />
+          <div class="invalid-tooltip">
+            Please provide your First Name
+          </div>
+        </div>
+        <div class="col-md-6 position-relative">
+          <label for="inputLast" class="form-label">Last Name</label>
+          <input type="text" class="form-control" id="inputLast" required />
+          <div class="invalid-tooltip">
+            Please provide your Last Name
+          </div>
+        </div>
+
+        <div class="col-md-6 position-relative">
+          <label for="inputCity" class="form-label">City</label>
+          <input type="text" class="form-control" id="inputCity" required />
+          <div class="invalid-tooltip">
+            Please provide a valid city.
+          </div>
+        </div>
+        <div class="col-md-3 position-relative">
+          <label for="validationTooltip04" class="form-label">State</label>
+          <select class="form-select" id="validationTooltip04" required>
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District Of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Louisiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
+          </select>
+
+          <div class="invalid-tooltip">
+            Please select a valid state.
+          </div>
+        </div>
+        <div class="col-md-3 position-relative">
+          <label for="inputZip" class="form-label">Zip</label>
+          <input type="text" class="form-control" id="inputZip" required />
+          <div class="invalid-tooltip">
+            Please provide a valid zip.
+          </div>
+        </div>
+
+        <div class="container-fluid col-md-6">
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="inlineRadioOptions"
+              id="inlineRadio1"
+              value="option1"
+            />
+            <label class="form-check-label" for="inlineRadio1">PayPal</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="inlineRadioOptions"
+              id="inlineRadio2"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineRadio2"
+              >MasterCard</label
+            >
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="inlineRadioOptions"
+              id="inlineRadio3"
+              value="option3"
+            />
+            <label class="form-check-label" for="inlineRadio3">Visa</label>
+          </div>
+        </div>
+        <div class="mb-3 col-md-6">
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >Message</label
+          >
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+            required
+          ></textarea>
+          <div class="invalid-tooltip">
+            Please add a Message
+          </div>
+        </div>
+
+        <div class="card-footer col-12">
+          <div class="col-12">
+            <button class="btn btn-primary" type="clear">Cancel</button>
+            <button class="btn btn-primary" type="submit">Submit form</button>
+          </div>
+        </div>
+      </form>
     </div>
   </body>
 </html>
